--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-pageflip": "^2.0.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+	"reset-css": "^5.0.1",
+    "sass": "^1.35.1"
   },
   "scripts": {
     "start": "react-scripts start",
